# vipre-data

./: .gitattributes  .gitignore  .gitmodules  LICENSE.md  Makefile  README.md  db-init.sql  pyproject.toml  requirements.txt  vipre-data.spec
alembic/versions/: db3508e20429_initial_schema.py
data/: EJS_subset.db
docs/: ERD.drawio  backend_service.md  building_with_pex.md  old_data_dictionary.md  sample_table_data.xlsx
schemas/: VIPRE Database Values - Architecture.csv  VIPRE Database Values - Body.csv  VIPRE Database Values - Entry.csv  VIPRE Database Values - Flyby.csv  VIPRE Database Values - Maneuver.csv  VIPRE Database Values - Occultation.csv  VIPRE Database Values - Trajectory.csv  vipre_schema-architecture.csv  vipre_schema-architecture.json  vipre_schema-body.csv  vipre_schema-body.json  vipre_schema-entry.csv  vipre_schema-entry.json  vipre_schema-flyby.csv  vipre_schema-flyby.json  vipre_schema-maneuver.csv  vipre_schema-maneuver.json  vipre_schema-occultation.csv  vipre_schema-occultation.json  vipre_schema-trajectory.csv  vipre_schema-trajectory.json
scripts/: README.md  make_models.py  make_schemas.py  rendered.models.py
scripts/templates/: models.py.jinja
src/: db-init.sql  init-db.sql  models.py
src/alembic/: env.py
src/alembic/versions/: 2e9686bf76a3_generate_schema.py  (+4 more)
src/app/: dependencies.py  main.py  schemas.py
src/computations/: cart2sph.py  conic_2point.py  entry.py
src/sql/: crud.py  database.py  models.py
vipre_data/: alembic.ini  init-db.sql  server.py  server.spec  vipre-data.spec
vipre_data/alembic/: env.py
vipre_data/app/: dependencies.py  main.py
vipre_data/computations/: __init__.py  cart2sph.py  conic_1point.py  conic_2point.py  entry.py  planet_rotation_velocity.py  sun_relative_states_angle.py
vipre_data/sql/: E_S_test_big.db.REMOVED.git-id  E_S_test_big2.db.REMOVED.git-id  E_S_test_big9.db  E_S_test_big9.db.REMOVED.git-id  crud.py  database.py  models.py  validate_db.py
(+19 files in other folders)
