[tool.poetry]
name = "vipre-data"
version = "0.1.0"
description = "Data management for the VIPRE Application"
authors = ["Michael Fedell <mfedell@jpl.nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
