[tool.poetry]
name = "vipre-data"
version = "0.1.0"
description = "Data management for the VIPRE Application"
authors = ["Michael Fedell <mfedell@jpl.nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.7"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
black = "^22.1.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/src/sql/models.py
'''
